--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ body {
     overflow-x: hidden;
 }
 
-/* Header CSS styles */
+/* HEADER CSS styles */
 .header {
   text-align: left;
   padding: 0.625rem 1.25rem;
@@ -49,7 +49,7 @@ body {
   cursor: pointer;
 }
 
-/* Navbar CSS styles */
+/* NAVBAR CSS styles */
 .navbar {
   display: flex;
   justify-content: space-between;
@@ -67,8 +67,7 @@ body {
 .navbar-menu {
   transform: translateX(-100%);
   transition: transform 0.3s ease-in-out;
-  background-color: #333;
-  opacity: 0.85;
+  background-color: #020D19;
   color: white;
   position: absolute;
   top: 0;
@@ -123,7 +122,7 @@ input[type="checkbox"] {
   accent-color: #df0101;
 }
 
-/* Media queries styles */
+/* MEDIA queries styles */
 @media (min-width: 768px) {
   body {
     width: 768px;
