--- a/src/index.css
+++ b/src/index.css
@@ -74,7 +74,6 @@ body {
   display: block;
   width: 3em;
   height: 3rem;
-  /* font-size: 2.4rem; */
   cursor: pointer;
 }
 
@@ -144,15 +143,11 @@ body {
   border-bottom: 1px #fff solid;
 }
 
-/* .hero-ul li label {
-  font-size: 4.8rem;
-} */
-
 .hero-ul li label {
-  font-size: 2rem; /* Adjust font size for better readability */
-  display: flex; /* Ensure label aligns its content horizontally */
-  align-items: center; /* Vertically align label contents */
-  gap: 1rem; /* Space between checkbox and text */
+  font-size: 2rem;
+  display: flex;
+  align-items: center;
+  gap: 1rem; 
 }
 
 input[type="checkbox"] {
