--- a/src/index.css
+++ b/src/index.css
@@ -46,6 +46,7 @@ body {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  z-index: 2;
 }
 
 .navbar-logo {
@@ -165,7 +166,7 @@ input[type="checkbox"] {
   align-items: center;
   justify-content: space-between;
   font-size: 4.8rem;
-  padding: 0.5rem 0;
+  padding-top: 2rem;
 }
 
 .hero-item div {
@@ -180,6 +181,50 @@ input[type="checkbox"] {
 
 .hero-item div svg:hover {
   color: #E07676;
+}
+
+/* LINES added in background */
+/* Have u tried grabbing each line and doing :after, doing a content: ""  and a height, border radius, and width, w a z-index below the text and a position absolute on the line, position relative on the text */
+.header, .button-container, .hero-items {
+  position: relative;
+  margin-top: 2px;
+  margin-bottom: 30px;
+}
+
+.header::after {
+  content: "";
+  position: absolute;
+  bottom: 55px;
+  left: 0;
+  width: 100%;
+  height: 13px;
+  border-radius: 13px;
+  background: #FDF3F3;
+  z-index: -1;
+}
+
+.button-container::after {
+  content: "";
+  position: absolute;
+  bottom: -40px;
+  left: 0;
+  width: 100%;
+  height: 13px;
+  border-radius: 13px;
+  background: #FDF3F3;
+  z-index: -1;
+}
+
+.hero-items::after {
+  content: "";
+  position: absolute;
+  bottom: 8px;
+  left: 0;
+  width: 100%;
+  height: 13px;
+  border-radius: 13px;
+  background: #FDF3F3;
+  z-index: -1;
 }
 
 /* MEDIA queries styles */
